# gmx2HyMD

./: .gitignore  README.md  pyproject.toml
src/gmx2HyMD/: gro_utils.py  h5_utils.py  main.py  pdb_utils.py  simplified_template.toml  system_properties.py  template.toml  toml_utils.py  topol_utils.py
test_system/protein/: PROA_P.itp  README  index.ndx  step4.0_minimization.mdp  step4.1_minimization.mdp  step4.2_equilibration.mdp  step5_production.mdp  system.top
